applied the parallax page stuff to a div instead of the html/body element; might have been causing problems on Firefox, and it will definitely be necessary if I want a fixed-position header or other object

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -39,19 +39,24 @@ body {
 // styling for parallax layout -- could potentially be applied universally
 
 .parallax-page {
-    height: 100%;
-    overflow: hidden;
-    body {
-        position: relative;
         height: 100vh;
         overflow-y: auto;
         overflow-x: hidden;
         -webkit-perspective: $perspective;
         perspective: $perspective;
-    }
     div {
         position: relative;
     }
+}
+
+.parallax-group {
+    @extend .unwrap;
+    position: relative;
+    z-index: 0;
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    -o-transform-style: preserve-3d;
+    transform-style: preserve-3d;
 }
 
 
